WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47622
[GTK]
r69681
caused some tests to crash
https://bugs.webkit.org/show_bug.cgi?id=47622
Summary
[GTK] r69681 caused some tests to crash
Martin Robinson
Reported
2010-10-13 14:29:03 PDT
Before landing this patch did not cause tests to crash locally. It was only after this patch landed were any problems detected.
Attachments
Relavent stack trace
(10.32 KB, text/html)
2010-10-13 14:29 PDT
,
Martin Robinson
no flags
Details
Patch for this issue
(2.14 KB, patch)
2010-10-13 14:34 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
Patch with Holger's suggestion
(1.76 KB, patch)
2010-10-13 15:12 PDT
,
Martin Robinson
zecke
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2010-10-13 14:29:45 PDT
Created
attachment 70662
[details]
Relavent stack trace
Martin Robinson
Comment 2
2010-10-13 14:34:44 PDT
Created
attachment 70664
[details]
Patch for this issue
Holger Freyther
Comment 3
2010-10-13 15:08:41 PDT
I think you should initialize m_layerContext in the ctor, then this null check will work.
Martin Robinson
Comment 4
2010-10-13 15:12:47 PDT
Created
attachment 70670
[details]
Patch with Holger's suggestion
Holger Freyther
Comment 5
2010-10-13 15:18:08 PDT
Comment on
attachment 70670
[details]
Patch with Holger's suggestion Looks good, Qt EWS is green too.
Martin Robinson
Comment 6
2010-10-13 15:25:22 PDT
Committed
r69701
: <
http://trac.webkit.org/changeset/69701
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug