2010-10-13  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Holger Freyther.

        [GTK] r69681 caused some tests to crash
        https://bugs.webkit.org/show_bug.cgi?id=47622

        Properly initialize m_layerContext on the ContextShadow so that in situations
        where beginShadowLayer bails out early with a null return value, it is set
        to null. This may happen when the first call to beginShadowLayer on a particular
        ContextShadow uses a region which is entirely outside the clip region or which
        is empty.

        * platform/graphics/cairo/ContextShadow.cpp:
        (WebCore::ContextShadow::ContextShadow): Properly initialize m_layerContext.

git-svn-id: svn://svn.chromium.org/blink/trunk@69701 bbb929c8-8fbe-4397-9dbb-9b2b20218538